--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,13 @@
         android:id="@+id/speedometer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:maxSpeed="220"
+        app:maxSpeed="160"
+        app:currentSpeed="0"
+        app:onColor="@color/colorAccent"
+        app:digitColor="@color/colorAccent"
+        app:digitSpeedTextEnabled="true"
+        app:digitSpeedTextSize="16sp"
+        app:backgroundColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,5 +38,14 @@
         android:text="decrease"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
+    <Button
+        android:id="@+id/button_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Init test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_decrease"
+        app:layout_constraintStart_toEndOf="@+id/button_increase" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
