Horizontal digits around circle added

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,6 +9,7 @@
         <attr name="backgroundColor" format="color" />
         <attr name="scaleTextSize" format="dimension" />
         <attr name="digitSpeedTextEnabled" format="boolean" />
+        <attr name="horizontalDigits" format="boolean" />
         <attr name="digitSpeedTextSize" format="dimension" />
     </declare-styleable>
 </resources>
