--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,22 +7,44 @@
     android:background="@android:color/darker_gray"
     tools:context=".presentation.view.MainActivity">
 
+    <!--
+        View attributes:
+            maxSpeed - sets max speed
+            currentSpeed - sets arrow to desired speed
+            dashColor - sets color of dashes
+            digitColor - sets color of digits
+            arrowColor - sets color of arrow
+            backgroundColor - sets color of background
+            scaleTextSize - sets text size
+            digitSpeedTextEnabled - sets speed to be displayed in arrow placeholder circle
+            horizontalDigits - set digits to be displayed in horizontal mode
+            dashesStep - sets amount of dashes
+        -->
     <com.amsdevelops.speedometer.presentation.customviews.speedometer.SpeedometerCustomView
         android:id="@+id/speedometer"
         android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        app:maxSpeed="180"
+        app:currentSpeed="10"
+        app:dashesStep="2"
+        app:dashColor="@android:color/white"
+        app:digitColor="@android:color/white"
+        app:arrowColor="@android:color/holo_red_dark"
+        app:backgroundColor="@android:color/background_dark"
+        app:scaleTextSize="20sp"
+        app:digitSpeedTextEnabled="true"
         app:horizontalDigits="true"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:maxSpeed="180" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_decrease"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="decrease"
+        android:text="@string/minus_ten"
         app:layout_constraintBottom_toTopOf="@+id/button_test"
         app:layout_constraintEnd_toEndOf="@+id/button_increase"
         app:layout_constraintHorizontal_bias="0.5"
@@ -33,7 +55,7 @@
         android:id="@+id/button_increase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="increase"
+        android:text="@string/plus_ten"
         app:layout_constraintBottom_toTopOf="@+id/button_decrease"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/speedometer"
@@ -43,7 +65,7 @@
         android:id="@+id/button_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Init test"
+        android:text="@string/init_test"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/button_decrease"
         app:layout_constraintHorizontal_bias="0.5"
