--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,13 +3,13 @@
     <declare-styleable name="SpeedometerCustomView">
         <attr name="maxSpeed" format="float" />
         <attr name="currentSpeed" format="float" />
-        <attr name="onColor" format="color" />
+        <attr name="dashesStep" format="integer" />
+        <attr name="dashColor" format="color" />
         <attr name="digitColor" format="color" />
         <attr name="arrowColor" format="color" />
         <attr name="backgroundColor" format="color" />
         <attr name="scaleTextSize" format="dimension" />
         <attr name="digitSpeedTextEnabled" format="boolean" />
         <attr name="horizontalDigits" format="boolean" />
-        <attr name="digitSpeedTextSize" format="dimension" />
     </declare-styleable>
 </resources>
