--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -20,24 +20,6 @@
             horizontalDigits - set digits to be displayed in horizontal mode
             dashesStep - sets amount of dashes
         -->
-    <com.amsdevelops.speedometer.presentation.customviews.speedometer.SpeedometerCustomView
-        android:id="@+id/speedometer"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:maxSpeed="180"
-        app:currentSpeed="0"
-        app:dashesStep="2"
-        app:dashColor="@android:color/white"
-        app:digitColor="@android:color/white"
-        app:arrowColor="@android:color/holo_red_dark"
-        app:backgroundColor="@android:color/background_dark"
-        app:scaleTextSize="20sp"
-        app:digitSpeedTextEnabled="true"
-        app:horizontalDigits="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_decrease"
@@ -57,7 +39,6 @@
         android:text="@string/plus_ten"
         app:layout_constraintBottom_toTopOf="@+id/button_decrease"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/speedometer"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -70,5 +51,12 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/button_decrease"
         app:layout_constraintTop_toBottomOf="@+id/button_decrease" />
+
+    <com.amsdevelops.speedometer.presentation.customviews.speedometer.SpeedometerCustomView
+        android:id="@+id/speedometerCustomView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
