--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,19 +21,19 @@
         -->
     <com.amsdevelops.speedometer.presentation.customviews.speedometer.SpeedometerCustomView
         android:id="@+id/speedometer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:maxSpeed="180"
-        app:currentSpeed="0"
-        app:dashesStep="2"
-        app:dashColor="@android:color/white"
-        app:digitColor="@android:color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:arrowColor="@android:color/holo_red_dark"
         app:backgroundColor="@android:color/background_dark"
+        app:currentSpeed="0"
         app:scaleTextSize="20sp"
+        app:maxSpeed="180"
+        app:dashColor="@android:color/white"
+        app:dashesStep="2"
+        app:digitColor="@android:color/white"
         app:digitSpeedTextEnabled="true"
         app:horizontalDigits="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
